[gd_scene load_steps=6 format=3 uid="uid://72ukitfml22y"]

[ext_resource type="Script" path="res://Scripts/Social.gd" id="1_bk7rn"]
[ext_resource type="PackedScene" uid="uid://kbhjd5hlpq7a" path="res://Scenes/Buildings/BuildingBase.tscn" id="2_24crr"]
[ext_resource type="PackedScene" uid="uid://1g73e0fl7g7x" path="res://Scenes/Users/SocialsUser.tscn" id="2_qitjm"]
[ext_resource type="Texture2D" uid="uid://bg0f66rrgssma" path="res://Sprites/social.png" id="3_0fksv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6e1uh"]
size = Vector2(64, 64)

[node name="Social" type="StaticBody2D" groups=["Action", "Buildings", "NoBuild", "Social"]]
script = ExtResource("1_bk7rn")
user_spawn = ExtResource("2_qitjm")

[node name="UserTimer" type="Timer" parent="."]
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6e1uh")

[node name="Social" type="Sprite2D" parent="."]
texture = ExtResource("3_0fksv")

[node name="BuildingBase" parent="." instance=ExtResource("2_24crr")]
position = Vector2(-32, -32)

[node name="DebugPosted" type="Label" parent="."]
offset_left = -33.0
offset_top = -9.0
offset_right = 70.0
offset_bottom = 17.0
theme_override_colors/font_color = Color(0.380392, 0.380392, 0, 1)
text = "DbgPosted"

[connection signal="timeout" from="UserTimer" to="." method="_on_user_timer_timeout"]
